--- a/ingos.serviceforfeatureflags.client/src/app/app.component.css
+++ b/ingos.serviceforfeatureflags.client/src/app/app.component.css
@@ -117,13 +117,71 @@ th {
   background-color: #45a049;
 }
 
-/* Адаптация для мобильных */
-@media (max-width: 768px) {
-  .search-group {
-    width: 100%;
-  }
+/* Скрыть стандартный чекбокс */
+.hidden-checkbox {
+  display: none;
+}
 
-  .tab-input {
-    flex-grow: 1;
-  }
+/* Контейнер для кастомного чекбокса */
+.custom-checkbox {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+/* Кастомный круглый чекбокс */
+.custom-checkmark {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 2px solid #ccc;
+  background-color: #fff;
+  position: relative;
+  transition: background-color 0.3s, border-color 0.3s;
+}
+
+/* Стили для активного состояния (зеленый круг) */
+.hidden-checkbox:checked + .custom-checkmark {
+  background-color: #4CAF50; /* Зеленый цвет */
+  border-color: #4CAF50;
+}
+
+/* Белая точка внутри круга (опционально) */
+.hidden-checkbox:checked + .custom-checkmark::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 10px;
+  height: 10px;
+  background-color: white;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* Текст справа от чекбокса */
+.checkbox-label {
+  margin-left: 8px;
+  font-size: 14px;
+  color: #333;
+}
+select, input {
+  padding: 8px;
+  margin: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: 300px;
+}
+
+button {
+  padding: 8px 16px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #45a049;
 }
